Fix wide images from being distorted because of image loading fallback. Fix #191

--- a/examples/blocks/MediaBlock.scss
+++ b/examples/blocks/MediaBlock.scss
@@ -31,6 +31,7 @@
   @mixin invalid-image-fallback {
     min-width: 256px;
     min-height: 100px;
+    object-fit: contain;
     background-color: $GREY_333;
   }
 
